# infoshare

./: .gitattributes  .gitignore  README.md  cross_neutralizing.ipynb  cross_task_figs.ipynb  data.py  data_wsd.py  gen_pip_reqs.sh  infer_demo.ipynb  lswsd_lemmas.txt  main.py  model.py  pyproject.toml  report_figures.ipynb  requirements.txt  swsd_words.ipynb  test.py  test_xlingual.py  train.py  ud_stats.ipynb  utils.py  wsd.ipynb  xneutral.py
datamodules/: __init__.py  base.py  lswsd.py  wsd.py
experiments/: DEP-crosslingual-el_gdt_from_en_gum-accdrop.eps  DEP-crosslingual-el_gdt_from_it_vit-accdrop.eps  DEP-crosslingual-en_gum_from_el_gdt-accdrop.eps  DEP-crosslingual-en_gum_from_it_vit-accdrop.eps  DEP-crosslingual-it_vit_from_el_gdt-accdrop.eps  DEP-crosslingual-it_vit_from_en_gum-accdrop.eps  DEP_child_only_roberta-base_en_gum_acc_drop_agg=mean_probe=3.eps  DEP_roberta-base_en_gum.eps  DEP_roberta-base_en_gum_acc_drop_agg=first_probe=1_concat-mode=ONLY.eps  DEP_roberta-base_en_gum_acc_drop_agg=first_probe=1_concat-mode=ONLY_sampled.eps  DEP_xlm-roberta-base_el_gdt.eps  DEP_xlm-roberta-base_el_gdt_acc_drop_agg=first_probe=1_concat-mode=ONLY.eps  DEP_xlm-roberta-base_el_gdt_acc_drop_agg=first_probe=1_concat-mode=ONLY_sampled.eps  DEP_xlm-roberta-base_en_gum.eps  DEP_xlm-roberta-base_en_gum_acc_drop_agg=first_probe=1_concat-mode=ONLY.eps  DEP_xlm-roberta-base_en_gum_acc_drop_agg=first_probe=1_concat-mode=ONLY_sampled.eps  DEP_xlm-roberta-base_en_gum_acc_drop_agg=first_probe=9_concat-mode=ONLY.eps  DEP_xlm-roberta-base_it_vit.eps  DEP_xlm-roberta-base_it_vit_acc_drop_agg=first_probe=12_concat-mode=ONLY.eps  DEP_xlm-roberta-base_it_vit_acc_drop_agg=first_probe=12_concat-mode=ONLY_sampled.eps  POS-crosslingual-el_gdt_from_en_gum-accdrop.eps  POS-crosslingual-el_gdt_from_it_vit-accdrop.eps  POS-crosslingual-en_gum_from_el_gdt-accdrop.eps  POS-crosslingual-en_gum_from_it_vit-accdrop.eps  POS-crosslingual-it_vit_from_el_gdt-accdrop.eps  POS-crosslingual-it_vit_from_en_gum-accdrop.eps  POS_roberta-base_en_gum.eps  POS_roberta-base_en_gum_acc_drop_agg=first_probe=12.eps  POS_roberta-base_en_gum_acc_drop_agg=first_probe=12_sampled.eps  POS_xlm-roberta-base_el_gdt.eps  POS_xlm-roberta-base_el_gdt_acc_drop_agg=max_probe=9.eps  POS_xlm-roberta-base_en_gum.eps  (+7 more)
(+149 files in other folders)
