[tool.poetry]
name = "bert-infoshare"
version = "0.1.0"
description = "Studying information-sharing in BERT"
authors = [
  "Giulio Starace <giulio.starace@gmail.com>",
  "Konstantinos Papakostas <dinospk1999@gmail.com>",
  "Apostolos Panagiotopoulos <ap.panagiotopoulos@gmail.com>",
  "Matteo Rosati <matteo.rosati98@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
conllu = "^4.4.2"
transformers = "^4.18.0"
datasets = "^2.1.0"
jupyter = "^1.0.0"
torch = "^1.11.0"
pytorch-lightning = ">=1.6.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
