[tool.poetry]
name = "infoshare"
version = "0.1.0"
description = "Studying information-sharing in BERT"
authors = [
  "Giulio Starace <giulio.starace@gmail.com>",
  "Konstantinos Papakostas <dinospk1999@gmail.com>",
  "Apostolos Panagiotopoulos <ap.panagiotopoulos@gmail.com>",
  "Matteo Rosati <matteo.rosati98@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
conllu = "^4.4.2"
transformers = "^4.18.0"
datasets = "^2.1.0"
jupyter = "^1.0.0"
torch = "^1.11.0"
pytorch-lightning = "~1.7"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
pip = "^23.0"
pyarrow = "6.0.1"
torchmetrics = "^0.10"
tensorboard = "^2.12.0"

[tool.poetry.group.dev.dependencies]
jupyterlab-code-formatter = "^1.5.3"
nbdime = "^3.1.1"
black = "^22.3.0"
flake8 = "^4.0.1"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
